修改 vehicle 数据类型