@@ -16,9 +16,9 @@ public abstract class Drivable {
     protected double length;
     protected double width;
     protected double maxSpeed;
-    protected List<Vehicle> vehicles;
-    protected List<Point> points;
-    protected DrivableType drivableType;
+    protected LinkedList<Vehicle> vehicles;
+    protected List<Point> points; // 坐标
+    protected DrivableType drivableType; // lane / laneLink
 
     public abstract String getId();
 
@@ -27,7 +27,7 @@ public abstract class Drivable {
         points = new ArrayList<>();
     }
 
-    public List<Vehicle> getVehicles() {
+    public LinkedList<Vehicle> getVehicles() {
         return vehicles;
     }
 
@@ -61,20 +61,20 @@ public abstract class Drivable {
 
     public Vehicle getFirstVehicle() {
         if (!vehicles.isEmpty()) {
-            return vehicles.get(0);
+            return vehicles.getFirst();
         }
         return null;
     }
 
     public Vehicle getLastVehicle() {
         if (!vehicles.isEmpty()) {
-            return vehicles.get(vehicles.size() - 1);
+            return vehicles.getLast();
         }
         return null;
     }
 
     public void pushVehicle(Vehicle vehicle) {
-        vehicles.add(vehicle);
+        vehicles.addLast(vehicle);
     }
 
     public void popVehicle() {
@@ -93,7 +93,7 @@ public abstract class Drivable {
         this.maxSpeed = maxSpeed;
     }
 
-    public void setVehicles(List<Vehicle> vehicles) {
+    public void setVehicles(LinkedList<Vehicle> vehicles) {
         this.vehicles = vehicles;
     }
 
